--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    
+
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
 
