--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css">
+
+    <script src="./js/scripts.js" type="module" defer></script>
   </head>
   <body>
 
